--- a/src/style/components/common/title.css
+++ b/src/style/components/common/title.css
@@ -62,6 +62,16 @@ letter-spacing: 0;
 text-align: left;
 
 }
+.containLogin{
+  border-style: none;
+  width: 50%;
+  background-color: white;
+  margin-top: -5%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
 /*
 <div class="container flex ml-24 my-20">
 <div class=" w-1/4 mr-32">
